--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "es6-events",
+  "name": "es6-eventhub",
   "version": "1.0.1",
   "description": "Simple ES6 event emitter and listener",
   "main": "src/index.js",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ChrisRu/es6-events.git"
+    "url": "git+https://github.com/ChrisRu/es6-eventhub.git"
   },
   "keywords": [
     "simple",
@@ -31,7 +31,7 @@
   "author": "Christian Ruigrok",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ChrisRu/es6-events/issues"
+    "url": "https://github.com/ChrisRu/es6-eventhub/issues"
   },
-  "homepage": "https://github.com/ChrisRu/es6-events#readme"
+  "homepage": "https://github.com/ChrisRu/es6-eventhub#readme"
 }
