--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "es6-eventhub",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Simple ES6 event emitter and listener",
   "main": "lib/index.js",
   "directories": {
@@ -8,13 +8,13 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-jest": "^20.0.3",
-    "babel-preset-env": "^1.6.1",
-    "jest": "^20.0.4"
+    "babel-jest": "^23.0.1",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^23.1.0"
   },
   "scripts": {
     "test": "jest",
-    "prepublish": "babel -d lib src"
+    "prepublish": "babel --ignore __tests__ -d lib src"
   },
   "repository": {
     "type": "git",
